# AlgDat

./: CMakeLists.txt  README.md  a.out  boyer-moore.c  decompress.txt  main.c  main2.c  main3.c  main4.c  main6.c  merge.c  test.c
assignment3/: main.c
assignment4/: main.c
assignment5/: main.c
assignment6/: main.c
assignment7/: .gitignore  index.html  main  main.c
java/: øving4.java
