cmake_minimum_required(VERSION 4.0)
project(algdat C)
set(CMAKE_C_STANDARD 17)
add_executable(assignment1 assignment1/main.c)
add_executable(assignment2 assignment2/main.c)
add_executable(assignment3 assignment3/main.c)
add_executable(assignment4 assignment4/main.c)
add_executable(assignment5 assignment5/main.c)
add_executable(assignment6 assignment6/main.c)
add_executable(assignment7 assignment7/main.c)
